--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Apadrinhamento</title>
-  <base href="https://BarbaraSaporito.github.io/apadrinhamento/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -10,6 +10,6 @@
 <style>.mat-typography{font:400 14px/20px Roboto,sans-serif;letter-spacing:.0178571429em}html,body{height:100%}body{margin:0;font-family:Franklin Gothic Medium,Arial Narrow,Arial,sans-serif;background:#e3f3fa}</style><link rel="stylesheet" href="styles.84d75058d996b075.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.84d75058d996b075.css"></noscript></head>
 <body class="mat-typography">
   <app-root></app-root>
-<script src="runtime.7d3daeecfce7d9e6.js" type="module"></script><script src="polyfills.6c1c07ee9a0b1afe.js" type="module"></script><script src="main.73d378b157b88bfb.js" type="module"></script>
+<script src="runtime.7d3daeecfce7d9e6.js" type="module"></script><script src="polyfills.6c1c07ee9a0b1afe.js" type="module"></script><script src="main.45c3b0c176af0985.js" type="module"></script>
 
 </body></html>
